Fixed Blog_Card text overflow

--- a/public/stylesheets/articles.css
+++ b/public/stylesheets/articles.css
@@ -110,8 +110,13 @@
   
   .blogCard_text-wrapper{
     display: flex;
+    width: 75%;
     flex-direction: column;
     margin-left: 15px;
+  }
+
+  .blogCard_description{
+    overflow-wrap: break-word;
   }
   
   .blogCard_title{
